1.iii Added a list of 'todo items' for the daily chores

--- a/00-HTML-CSS-basics/exercises/1-HTML/index.html
+++ b/00-HTML-CSS-basics/exercises/1-HTML/index.html
@@ -11,6 +11,22 @@
   <header>
     <h1>My todo list</h1>
   </header>
+  <section>
+    <h2>Daily chores</h2>
+    <ol>
+      <li>Have breakfast</li>
+      <li>Clean the house</li>
+      <li>Have lunch</li>
+      <li>Watch some movies or tv-series</li>
+      <li>Read about programming</li>
+      <li>Program</li>
+      <li>Program more</li>
+      <li>Have dinner</li>
+      <li>Program</li>
+      <li>Sleep</li>
+      <li>Repeat</li>
+    </ol>
+  </section>
 </body>
 
 </html>
