2. Added metatags to the documents

--- a/00-HTML-CSS-basics/exercises/1-HTML/index.html
+++ b/00-HTML-CSS-basics/exercises/1-HTML/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Gaspar Tripodi" />
+  <meta name="copyright" content="Gaspar Copyright" />
+  <meta name="description" content="Globant Bootcamp" />
+  <meta name="keywords" content="HTML">
   <title>The Basics of HTML</title>
 </head>
 
