--- a/00-HTML-CSS-basics/exercises/1-HTML/sign-up.html
+++ b/00-HTML-CSS-basics/exercises/1-HTML/sign-up.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Gaspar Tripodi" />
+  <meta name="copyright" content="Gaspar Copyright" />
+  <meta name="description" content="Globant Bootcamp" />
+  <meta name="keywords" content="HTML">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <title>Sign up</title>
   <link href="styles/sign-up.css" rel="stylesheet">
