--- a/00-HTML-CSS-basics/exercises/2-CSS/index.html
+++ b/00-HTML-CSS-basics/exercises/2-CSS/index.html
@@ -7,6 +7,7 @@
   <title>Change me!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
+  <link href="styles/normalize.css" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
 </head>
 
