--- a/00-HTML-CSS-basics/exercises/2-CSS/index.html
+++ b/00-HTML-CSS-basics/exercises/2-CSS/index.html
@@ -12,6 +12,32 @@
 </head>
 
 <body>
+  <header>
+    <h4>&#60;header&#62;</h4>
+  </header>
+  <div>
+    <nav >
+      <h4>&#60;nav&#62;</h4>
+    </nav>
+    <section>
+      <h4>&#60;section&#62;</h4>
+      <header>
+        <h4>&#60;header&#62;</h4>
+      </header>
+      <article>
+        <h4>&#60;article&#62;</h4>
+      </article>
+      <footer>
+        <h4>&#60;footer&#62;</h4>
+      </footer>
+    </section>
+    <aside>
+      <h4>&#60;aside&#62;</h4>
+    </aside>
+  </div>
+  <footer>
+    <h4>&#60;footer&#62;</h4>
+  </footer>
 </body>
 
 </html>
