--- a/00-HTML-CSS-basics/exercises/2-CSS/index.html
+++ b/00-HTML-CSS-basics/exercises/2-CSS/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <h4>&#60;header&#62;</h4>
   </header>
   <div>
-    <nav >
+    <nav class="navigation">
       <h4>&#60;nav&#62;</h4>
     </nav>
-    <section>
+    <section class="content">
       <h4>&#60;section&#62;</h4>
       <header>
         <h4>&#60;header&#62;</h4>
@@ -31,11 +31,11 @@
         <h4>&#60;footer&#62;</h4>
       </footer>
     </section>
-    <aside>
+    <aside class="sidebar">
       <h4>&#60;aside&#62;</h4>
     </aside>
   </div>
-  <footer>
+  <footer class="footer">
     <h4>&#60;footer&#62;</h4>
   </footer>
 </body>
