--- a/00-HTML-CSS-basics/exercises/2-CSS/index.html
+++ b/00-HTML-CSS-basics/exercises/2-CSS/index.html
@@ -12,31 +12,32 @@
 </head>
 
 <body>
+  Body
   <header class="header">
-    <h4>&#60;header&#62;</h4>
+    &#60;header&#62;
   </header>
   <div>
     <nav class="navigation">
-      <h4>&#60;nav&#62;</h4>
+      &#60;nav&#62;
     </nav>
     <section class="content">
-      <h4>&#60;section&#62;</h4>
+      &#60;section&#62;
       <header>
-        <h4>&#60;header&#62;</h4>
+        &#60;header&#62;
       </header>
       <article>
-        <h4>&#60;article&#62;</h4>
+        &#60;article&#62;
       </article>
       <footer>
-        <h4>&#60;footer&#62;</h4>
+        &#60;footer&#62;
       </footer>
     </section>
     <aside class="sidebar">
-      <h4>&#60;aside&#62;</h4>
+      &#60;aside&#62;
     </aside>
   </div>
   <footer class="footer">
-    <h4>&#60;footer&#62;</h4>
+    &#60;footer&#62;
   </footer>
 </body>
 
