--- a/00-HTML-CSS-basics/exercises/2-CSS/index.html
+++ b/00-HTML-CSS-basics/exercises/2-CSS/index.html
@@ -12,23 +12,22 @@
 </head>
 
 <body>
-  Body
   <header class="header">
     &#60;header&#62;
   </header>
-  <div>
+  <div class="middle">
     <nav class="navigation">
       &#60;nav&#62;
     </nav>
     <section class="content">
       &#60;section&#62;
-      <header>
+      <header class="header">
         &#60;header&#62;
       </header>
       <article>
         &#60;article&#62;
       </article>
-      <footer>
+      <footer class="footer">
         &#60;footer&#62;
       </footer>
     </section>
