2. Adding some events

--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript and DOM APIs</title>
 
-  <!-- Style sheet -->
+  <!-- Normalize -->
   <link href="normalize.css" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- Style -->
   <link href="style.css" rel="stylesheet">
 </head>
 
@@ -19,6 +25,7 @@
     <section class="hidden-section">
       Hello World
     </section>
+    <button class="btn btn-secondary btn-lg" id="alert-button">Click me!</button>
   </article>
   <script type="text/javascript" src="jsfile.js"></script>
 </body>
