--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -25,7 +25,15 @@
     <section class="hidden-section">
       Hello World
     </section>
-    <button class="btn btn-secondary btn-lg" id="alert-button">Click me!</button>
+    <div class="container">
+      <section id="joke-section">
+        <div class="content" style="align-items: center;">
+          <h4 class="mb-4">Get a joke from Chuck Norris</h4>
+          <button class="btn btn-secondary btn-lg" id="alert-button">Click me!</button>
+          <p id="joke"></p>
+        </div>
+      </section>
+    </div>
   </article>
   <script type="text/javascript" src="jsfile.js"></script>
 </body>
