4. Data fetching with parameters

--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -33,6 +33,18 @@
           <p id="joke"></p>
         </div>
       </section>
+      <section id="right-section">
+        <div class="content">
+          <h4 class="mb-4">List of repositories</h4>
+          <form>
+            <input class="form-control" id="search-text" type="text" placeholder="Insert search keyword">
+            <button class="btn btn-success btn-sm mt-3" id="search-btn">Search</button>
+          </form>
+          <ul class="list-group text-dark mt-3" id="list-of-repositories">
+
+          </ul>
+        </div>
+      </section>
     </div>
   </article>
   <script type="text/javascript" src="jsfile.js"></script>
