--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -33,6 +33,13 @@
           <p id="joke"></p>
         </div>
       </section>
+      <section>
+        <div class="content">
+          <h4 class="mb-4 text-white">Table</h4>
+          <section id="table">
+          </section>
+        </div>
+      </section>
       <section id="right-section">
         <div class="content">
           <h4 class="mb-4">List of repositories</h4>
