2. Drag and Drop

--- a/04-HTML5-APIs/1-2/index.html
+++ b/04-HTML5-APIs/1-2/index.html
@@ -4,17 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storages</title>
+  <title>Topic 3 - Browser APIs</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
   <header class="page-header">
-    <h1 class="page-title">Storages</h1>
+    <h1 class="page-title">Topic 3 - Browser APIs</h1>
   </header>
 
-  <section class="storage-section">
+  <section class="page-section">
+    <header>
+      <h2>Storages</h2>
+    </header>
     <form class="storage-form">
       <div class="input-wrapper">
         <label for="text-area">Text area</label>
@@ -25,7 +28,19 @@
     </form>
   </section>
 
+  <section class="page-section">
+    <header>
+      <h2>Drag and Drop</h2>
+    </header>
+    <!-- Drop zone-->
+    <div class="drop-zone" id="drop-zone">
+      <p>Drag and drop a .txt file here</p>
+      <p id="drop-data">No data</p>
+    </div>
+  </section>
+
   <script src="storages.js"></script>
+  <script src="dragAndDrop.js"></script>
 </body>
 
 </html>
