--- a/04-HTML5-APIs/1-2-3/index.html
+++ b/04-HTML5-APIs/1-2-3/index.html
@@ -39,8 +39,16 @@
     </div>
   </section>
 
+  <section class="page-section">
+    <header>
+      <h2>WebSockets</h2>
+    </header>
+    <div id="output"></div>
+  </section>
+
   <script src="storages.js"></script>
   <script src="dragAndDrop.js"></script>
+  <script src="webSockets.js"></script>
 </body>
 
 </html>
